# xdpd-VA

./: configure.ac
config/: plugin_config.m4
rofl-modification/: crofbase.cc  crofbase.h
src/xdpd/: Makefile.am  cmm.cc  xdpd.cc
src/xdpd/drivers/gnu_linux/src/hal-imp/: driver.cc
src/xdpd/drivers/gnu_linux/src/io/packet_classifiers/c_types_pktclassifier/: autogen_pkt_types.c  autogen_pkt_types.h
src/xdpd/drivers/gnu_linux/src/io/packet_classifiers/c_types_pktclassifier/tools/: pkt_types_gen.py
src/xdpd/management/: switch_manager.cc  switch_manager.h  system_manager.cc
src/xdpd/management/plugins/config/: Makefile.am  root_scope.cc  root_scope.h  scope.cc
src/xdpd/management/plugins/config/openflow/: lsi_scope.cc
src/xdpd/management/plugins/config/virtualization-agent/: Makefile.am  flowspace_scope.cc  flowspace_scope.h  slice_scope.cc  virtual-agent_scope.cc
src/xdpd/openflow/: of_endpoint.h  openflow_switch.cc  openflow_switch.h
src/xdpd/openflow/openflow10/: of10_endpoint.cc  of10_endpoint.h  openflow10_switch.cc  openflow10_switch.h
src/xdpd/openflow/openflow12/: of12_endpoint.cc  of12_endpoint.h  of12_translation_utils.cc  openflow12_switch.cc  openflow12_switch.h
src/xdpd/openflow/openflow13/: of13_endpoint.cc  of13_endpoint.h  of13_translation_utils.cc  openflow13_switch.cc  openflow13_switch.h
src/xdpd/virtualization-agent/: Makefile.am  va_switch.cc  va_switch.h  virtualagent.cc  virtualagent.h  virtualgateway.cc  virtualgateway.h
